# investment-recommendation-engine

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt
.devcontainer/: DockerFIle  devcontainer.json
app/: __init__.py  config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: investment.py
app/core/: config.py
app/models/: investment.py
app/routes/: routes.py
app/schemas/: investment.py
